# snapmaker-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  snapmaker_client.rs  status.rs
src/http_endpoints/: controls.rs  enclosure.rs  index.rs  mod.rs  upload.rs  version.rs
static/: index.html
templates/: controls.html.tera  index.html.tera  status.html.tera
