[package]
name = "sm-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.6"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
mime = "0.3"
chrono = "0.4"
anyhow = "1.0.100"
tempfile = "3.24.0"
tera = "1.19"
